--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,11 @@ body, html {
     font-weight: normal;
     font-family: 'Open Sans';
     font-size: 14px;
-    background-color: var(--dark-main-blue)
+    background-color: var(--dark-main-blue);
+    overflow-x: clip;
 }
 
-.main-container{
-    overflow: hidden;
-}
+
 
 h1{
     color: white;
@@ -322,6 +321,13 @@ footer .logo{
     margin: 4px;
 }
 
+.social-icons {
+    display: flex;
+    direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .social-icon {
     display: flex;
     fill: white;
@@ -340,4 +346,74 @@ a.social-icon:hover {
 .social-icon svg {
     height: 25px;
     width: 25px;
+}
+
+
+@media only screen and (max-width:940px){
+
+    nav img{
+        width: 30%;
+    }
+    
+    ul.horizontal-menu{
+        justify-content: space-between;
+        width: 70%;
+    }
+
+    .horizontal-menu li{
+        margin: initial;
+    }
+
+    section#summary {
+        margin:auto;
+        display: block;
+    }
+
+    .mid-content {
+        width: 100%;
+    }
+
+    #stay-productive {
+        display: block;
+    }
+
+    .card{
+        margin: 5%;
+    }
+
+    .row-flex{
+        display: block;
+        margin: 5%;
+    }
+
+    .row-flex-start {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    input{ 
+        margin:5px;
+    }
+
+    .text-icon-side{
+        margin: 0 0 5% 0;
+    }
+
+    footer {
+        margin-top: 30%;
+    }
+
+    footer .logo {
+        margin: 10% 0;
+    }
+
+    .social-icons {
+    margin: auto;
+    }
+
+    footer ul li{
+        margin: 0 0 10px 0;
+    }
+
 }
